# C4PM

./: .gitignore  README.md  pyproject.toml  setup.py
c4pm/: __init__.py  cli.py  llm.py  requirements.txt
c4pm/ingest/: loader.py
c4pm/output/: spec.py
c4pm/reasoning/: extractor.py  ranker.py
sample_data/: interview_01.txt  interview_02.txt  interview_03.txt  interview_04.txt  interview_05.txt  interview_06.txt
sample_data_2/: interview_01.txt  interview_02.txt  interview_03.txt  interview_04.txt
sample_data_b2c/: user_01_casual.txt  user_02_power.txt  user_03_churned.txt  user_04_new.txt
sample_data_conflict/: user_01.txt  user_02.txt  user_03.txt  user_04.txt
sample_data_devtools/: dev_01_startup.txt  dev_02_enterprise.txt  dev_03_hobbyist.txt  dev_04_midsize.txt
sample_data_edtech/: interview_01_teacher.txt  interview_02_student.txt  interview_03_admin.txt  interview_04_parent.txt
sample_data_enterprise/: interview_01_cto.txt  interview_02_sre.txt  interview_03_pm.txt  interview_04_customer.txt
sample_data_healthcare/: interview_01.txt  interview_02.txt  interview_03.txt  interview_04.txt
sample_data_marketplace/: buyer_01.txt  buyer_02.txt  seller_01.txt  seller_02.txt
sample_data_sparse/: interview_01.txt  interview_02.txt
