[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "c4pm"
version = "0.1.0"
description = "Turn customer feedback into executable product decisions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.75.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
c4pm = "c4pm.cli:app"

[tool.setuptools.packages.find]
where = ["."]
